--- a/home.html
+++ b/home.html
@@ -13,105 +13,20 @@
       crossorigin="anonymous"
     />
     <style>
-      .banner-section {
+      .filter-section {
         width: 100%;
         height: 100vh;
-        /* border: 2px solid red; */
-        background-image: url(https://cimages.milaap.org/milaap/image/upload/v1655996033/production/entity_details/milaap_page/524/Desktop_img_2__5__1655996032.jpg);
-        background-position: right 0 top -50px;
-        background-repeat: no-repeat;
-        display: flex;
-      }
-      .banner-content {
-        width: 80%;
-        height: auto;
+        border: 2px solid red;
         margin: auto;
-        /* border: 2px solid red; */
-        /* background-color: white; */
-        border-radius: 6px;
       }
-      .banner-numbers {
-        width: 100%;
-        height: 70px;
+      .cards-layout {
+        width: 60%;
+        height: 100%;
+        border: 2px solid blue;
         margin: auto;
-        margin-top: 50px;
-        /* border: 2px solid red; */
-        /* background-color: white; */
-        border-radius: 6px;
-        display: flex;
-      }
-      .download-app-container {
-        width: 70%;
-        height: 450px;
-        margin: auto;
-        border: 2px solid green;
-        border-radius: 10px;
-      }
-      .request-callback {
-        width: 100%;
-        height: 200px;
-        background-color: aliceblue;
-        padding: 29px 0;
-      }
-      .camp-lead-create {
-        width: 80%;
-        height: 100px;
-        margin: auto;
-        background-color: white;
-        border-radius: 6px;
-      }
-      .container-box {
-        width: 100%;
-        height: auto;
-        margin: auto;
-        /* border: 2px solid blue; */
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-      .home-banner-text {
-        font-size: 20px;
-        margin-bottom: 12px;
-        line-height: 27px;
-        margin-top: 35px;
-        width: 40%;
-        color: #212121;
-        font-family: AvenirLTPro-Book;
-      }
-      a,
-      button {
-        text-decoration: none;
-        font-size: 16px;
-        font-family: AvenirLTPro-Book;
-        list-style: none;
-      }
-
-      .start-btn {
-        padding: 8px 16px;
-        border-radius: 25px;
-        background-color: #9c3353;
-        border: 2px solid #9c3353;
-        font-size: 20px;
-        color: white;
-        margin-top: 50px;
-      }
-      .number-section {
-        width: 16%;
-        height: auto;
-        /* border: 1px solid blue; */
-        padding-left: 20px;
-      }
-      .number {
-        font-size: 20px;
-        color: #691a47;
-      }
-      .number-text {
-        font-size: 20px;
-        color: #5d5d5d;
-      }
-      .seprator {
-        border-left: 1px solid #e5e5e5;
-        border-color: #ffc1d3;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
       }
     </style>
   </head>
@@ -194,6 +109,98 @@
               <div class="number">84 lakhs +</div>
               <div class="number-text">Donations</div>
             </div>
+          </div>
+          <div class="branding-strip">
+            <div class="branding-text">
+              <h4 style="text-align: center; font-size: 20px">
+                Our crowdfunding platform charges NO fees
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="filter-section">
+      <h1 style="text-align: center">
+        Thousands are fundraising online on Milaap
+      </h1>
+      <div class="cards-layout">
+        <div class="card" style="width: 18rem">
+          <img
+            src="https://cimages.milaap.org/milaap/image/upload/c_fill,h_452,w_603/v1663660274/production/images/campaign/568791/IMG-20220919-WA0022_pfkowf_1663661020.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img
+            src="https://cimages.milaap.org/milaap/image/upload/c_fill,g_faces,h_452,w_603/v1661095595/production/images/campaign/553835/nuvjufeu6mct6jcba4ie_1661095598.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img
+            src="https://cimages.milaap.org/milaap/image/upload/c_fill,h_452,w_603/v1663089110/production/images/campaign/565577/IMG_2697_mamr67_1663092105.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img
+            src="https://cimages.milaap.org/milaap/image/upload/c_fill,h_452,w_603/v1662057856/production/images/campaign/560210/WhatsApp_Image_2022-08-23_at_11.09.32_PM_euhf9j_1662058667.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img
+            src="https://cimages.milaap.org/milaap/image/upload/c_fill,h_452,w_603/v1663164766/production/images/campaign/565902/IMG-20220914-WA0028_ub2hpe_1663164771.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img
+            src="https://cimages.milaap.org/milaap/image/upload/c_fill,g_faces,h_452,w_603/v1660465894/production/images/campaign/549882/WhatsApp_Image_2022-08-14_at_1.06.26_PM_dldjfd_1660465898.jpg"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
           </div>
         </div>
       </div>
