--- a/home.html
+++ b/home.html
@@ -13,20 +13,31 @@
       crossorigin="anonymous"
     />
     <style>
-      .filter-section {
-        width: 100%;
-        height: 100vh;
-        border: 2px solid red;
+      .carousel {
+        width: 80%;
+        height: 400px;
         margin: auto;
+        border: 2px solid red;
       }
-      .cards-layout {
-        width: 60%;
-        height: 100%;
+      .carousel-inner {
+        width: 100%;
+      }
+      .cards-carousel {
+        width: 65%;
+        height: 400px;
         border: 2px solid blue;
         margin: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .carousel-section {
+        display: block;
+        background-image: url(https://assets.milaap.org/packs/_/assets/images/home/testimonial-bg-703d695dffc4e175064a2bd22140a262.png);
+        background-position: 0 0;
+        background-size: 100% 100%;
+        padding: 125px 0;
+        margin: 33px 0;
       }
     </style>
   </head>
@@ -84,7 +95,7 @@
       </div>
     </nav>
 
-    <!-- <h1>Hello, world!</h1> -->
+    <!-- Banner Section Start -->
     <section class="banner-section">
       <div class="container-box">
         <div class="banner-content">
@@ -112,7 +123,7 @@
           </div>
           <div class="branding-strip">
             <div class="branding-text">
-              <h4 style="text-align: center; font-size: 20px">
+              <h4 style="font-size: 20px">
                 Our crowdfunding platform charges NO fees
               </h4>
             </div>
@@ -120,10 +131,66 @@
         </div>
       </div>
     </section>
+    <!-- Banner Section End -->
+
+    <!-- Filter Section Start -->
     <section class="filter-section">
-      <h1 style="text-align: center">
+      <h4 style="text-align: center; font-size: 30px">
         Thousands are fundraising online on Milaap
-      </h1>
+      </h4>
+      <p class="underline">
+        <span class="fancy">
+          <span class="diamond"></span>
+        </span>
+      </p>
+
+      <div class="campaign-search">
+        <div class="search-box">
+          <input
+            type="text"
+            id="search"
+            placeholder="Search by fundraiser name, title, location, cause or other keywords"
+            class="search"
+          />
+          <div class="search-btn-div">
+            <button class="btn-search">Search</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="four-card-div">
+        <div class="active1">
+          <div class="category-items">
+            <img
+              src="https://cimages.milaap.org/milaap/image/upload/v1662362868/verloop_template/white_Res.png"
+              alt=""
+              class="category-img"
+            />
+            <div class="category-label">Non-profits</div>
+          </div>
+        </div>
+        <div>
+          <div class="category-items">
+            <img
+              src="https://assets.milaap.org/assets/home/medical-icon-22eba5bcdf629bb6e4244cdaab2d40c12e2e5fa63b83d27654423737ef4319ca.png"
+              alt=""
+              class="category-img"
+            />
+            <div class="category-label">Medical</div>
+          </div>
+        </div>
+        <div>
+          <div class="category-items">
+            <img
+              src="https://assets.milaap.org/assets/home/memorial-icon-d649fd768074bb5124e32420e406bb00b1524ee5d277747db46964e82ad914bb.png"
+              alt=""
+              class="category-img"
+            />
+            <div class="category-label">Memorials</div>
+          </div>
+        </div>
+      </div>
+
       <div class="cards-layout">
         <div class="card" style="width: 18rem">
           <img
@@ -205,8 +272,62 @@
         </div>
       </div>
     </section>
+    <!-- Filter Section End -->
 
+    <!-- Download App Section Start -->
+    <div class="download-app-container">
+      <div class="image-div">
+        <div class="app-image">
+          <img src="./images/Capture.PNG" class="left-img" alt="" />
+        </div>
+      </div>
+      <div class="right-text-div">
+        <h3 class="title">Milaap app - fundraise and donate seamlessly!</h3>
+        <p class="description">
+          Set up and manage your fundraiser or donate to different causes from
+          your mobile at anytime and from anywhere
+        </p>
+        <div class="download-link">
+          <img
+            src="https://assets.milaap.org/assets/app-qrcode-homepage-prod-0a3005c2633fe1444aff0962fa5f5aabe3827b6fbfc6365035c90624187a860f.png"
+            alt=""
+            class="qr-code-img"
+          />
+          <p>Scan the QR Code to download app.</p>
+          <a href=""
+            ><img
+              src="https://assets.milaap.org/assets/play-store-btn-3cb8952867b0552ef1377bf63004d9d6613fd11da71e8446e7e6be1fd61f3182.png"
+              alt=""
+          /></a>
+          <a href=""
+            ><img
+              src="https://assets.milaap.org/assets/app-store-btn-0ae1713b1521ee08942a97e257b38ac5050a6cf70df4084b3f4ab234e60ea51f.png"
+              alt=""
+          /></a>
+        </div>
+      </div>
+    </div>
+    <!-- Download App Section End -->
+
+    <!-- Request Callback Section Start -->
+    <section class="request-callback">
+      <div class="camp-lead-create">
+        <p class="help-text">Need help to setup your free fundraiser?</p>
+        <button class="request-btn">Request a call</button>
+      </div>
+    </section>
+    <!-- Request Callback Section End -->
+
+    <!-- Carousel Section Start -->
     <section class="carousel-section">
+      <h4 style="text-align: center; font-size: 30px">
+        What people are saying about Milaap
+      </h4>
+      <p class="underline">
+        <span class="fancy">
+          <span class="diamond"></span>
+        </span>
+      </p>
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -236,27 +357,12 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <!-- <img
-        src="https://images.unsplash.com/photo-1487088678257-3a541e6e3922?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aW1hZ2UlMjBiYWNrZ3JvdW5kJTIwaG9yaXpvbnRhbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
-        class="d-block w-100"
-        alt="..."
-      /> -->
             <div class="cards-carousel"></div>
           </div>
           <div class="carousel-item">
-            <!-- <img
-        src="https://images.unsplash.com/photo-1496661415325-ef852f9e8e7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aW1hZ2UlMjBiYWNrZ3JvdW5kJTIwaG9yaXpvbnRhbHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
-        class="d-block w-100"
-        alt="..."
-      /> -->
             <div class="cards-carousel"></div>
           </div>
           <div class="carousel-item">
-            <!-- <img
-        src="https://images.unsplash.com/photo-1504805572947-34fad45aed93?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fGltYWdlJTIwYmFja2dyb3VuZCUyMGhvcml6b250YWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-        class="d-block w-100"
-        alt="..."
-      /> -->
             <div class="cards-carousel"></div>
           </div>
         </div>
@@ -267,7 +373,7 @@
           data-bs-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+          <span class="" style="color: black; font-size: 20px">Prev</span>
         </button>
         <button
           class="carousel-control-next"
@@ -275,20 +381,14 @@
           data-bs-target="#carouselExampleIndicators"
           data-bs-slide="next"
         >
+          <span class="" style="color: black; font-size: 20px">Next</span>
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <!-- <a href="" class="all-reviews-link">See al reviews</a> -->
     </section>
+    <!-- Carousel Section End -->
 
-    <section class="request-callback">
-      <div class="camp-lead-create">
-        <p>Need help to setup your free fundraiser?</p>
-        <button>Request a call</button>
-      </div>
-    </section>
-
-    <div class="download-app-container"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
