--- a/Home Page/home copy.html
+++ b/Home Page/home copy.html
@@ -17,7 +17,7 @@
         width: 80%;
         height: 400px;
         margin: auto;
-        border: 2px solid red;
+        /* border: 2px solid red; */
       }
       .carousel-inner {
         width: 100%;
@@ -25,7 +25,7 @@
       .cards-carousel {
         width: 65%;
         height: 400px;
-        border: 2px solid blue;
+        /* border: 2px solid blue; */
         margin: auto;
         display: flex;
         justify-content: center;
@@ -39,6 +39,86 @@
         padding: 125px 0;
         margin: 33px 0;
       }
+      .all-reviews-link {
+        display: block;
+        text-align: center;
+        text-decoration: underline;
+      }
+
+      .testimonial-profile {
+        border-radius: 4px;
+        -webkit-box-shadow: 0 2px 5px 0 rgb(33 33 33 / 20%);
+        box-shadow: 0 2px 5px 0 rgb(33 33 33 / 20%);
+        background-color: #fff;
+        padding: 20px 0;
+        width: 182px;
+        text-align: center;
+        position: absolute;
+        height: 189px;
+        top: 108px;
+        left: 285px;
+        display: inline-block;
+      }
+      .testimonial-description {
+        width: 549px;
+        margin-left: 182px;
+        padding: 22px 60px 22px 85px;
+        height: 255px;
+        -webkit-box-shadow: 0 2px 8px 0 rgb(51 33 33 / 13%);
+        box-shadow: 0 2px 8px 0 rgb(51 33 33 / 13%);
+        background: #fff;
+        padding: 22px 60px 22px 85px;
+        vertical-align: top;
+        border-radius: 6px;
+        margin-left: 182px;
+      }
+      .step-icon {
+        width: 100px;
+        height: 100px;
+        border: 1px solid #9c3353;
+        border-radius: 50%;
+        margin: 0 auto;
+      }
+      .step-title {
+        font-size: 16px;
+        color: #5d5d5d;
+        margin: 10px 0 2px;
+      }
+      .step-social {
+        margin: 2px 0;
+      }
+      .social-icon {
+        display: inline-block;
+        vertical-align: top;
+        width: 19px;
+        height: 19px;
+      }
+      .step-url {
+        font-size: 13px;
+        color: #6c6c6c;
+        margin-left: 2px;
+        font-family: AvenirLTPro-Book;
+        display: inline-block;
+        vertical-align: middle;
+        white-space: nowrap;
+        width: 121px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      .step-info {
+        font-size: 18px;
+        color: #212121;
+        font-family: AvenirLTPro-Book;
+        margin: 36px 0;
+        overflow: hidden;
+        position: relative;
+        line-height: 26px;
+        max-height: 245px;
+        text-align: justify;
+        margin-right: -1em;
+        padding-right: 1em;
+      }
+      /* Card */
     </style>
   </head>
   <body>
@@ -357,13 +437,95 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="cards-carousel"></div>
+            <div class="cards-carousel">
+              <div class="testimonial-profile">
+                <img
+                  src="https://cimages.milaap.org/milaap/image/upload/c_fill,g_faces,h_100,w_100/v1598249693/production/testimonials/user-28_1598249692.jpg"
+                  class="step-icon"
+                  alt=""
+                />
+                <div class="mobile-profile">
+                  <div class="step-title">Riddhi K Shah</div>
+                  <div class="step-social">
+                    <img
+                      src="https://cimages.milaap.org/milaap/image/upload/c_fill,g_faces,h_30,w_30/v1598249700/production/testimonials/facebook_icon_1598249692.jpg"
+                      class="social-icon"
+                      alt=""
+                    />
+                    <a href="" class="social-url">@Riddhi K Shah </a>
+                  </div>
+                </div>
+              </div>
+              <div class="testimonial-description">
+                <div class="step-info">
+                  I've had an incredible experience with Milaap as a first-time
+                  fund-raiser. They have been patient, competent and efficient.
+                  And that led me to leave them a tip-amount that someone else
+                  would have had to set up a small fundraiser. I believe in this
+                  move and I think it's brilliant.
+                </div>
+              </div>
+            </div>
           </div>
           <div class="carousel-item">
-            <div class="cards-carousel"></div>
+            <div class="cards-carousel">
+              <div class="testimonial-profile">
+                <img
+                  src="https://cimages.milaap.org/milaap/image/upload/c_fill,g_faces,h_100,w_100/v1594626088/production/testimonials/user-6_1594626087.jpg"
+                  class="step-icon"
+                  alt=""
+                />
+                <div class="mobile-profile">
+                  <div class="step-title">Gowrishankar</div>
+                  <div class="step-social">
+                    <img
+                      src="https://cimages.milaap.org/milaap/image/upload/c_fill,g_faces,h_30,w_30/v1594626092/production/testimonials/twitter_icon_1594626087.jpg"
+                      class="social-icon"
+                      alt=""
+                    />
+                    <a href="" class="social-url"> @tsgowrishankar </a>
+                  </div>
+                </div>
+              </div>
+              <div class="testimonial-description">
+                <div class="step-info">
+                  Milaap has an "ask for update" section which comes back with
+                  an update usually filled with smiles. I tend to go back
+                  looking for a positive update. It would make sense for online
+                  charities to do this proactively to create a reward for
+                  donors. Try making this a habit.
+                </div>
+              </div>
+            </div>
           </div>
           <div class="carousel-item">
-            <div class="cards-carousel"></div>
+            <div class="cards-carousel">
+              <div class="testimonial-profile">
+                <img
+                  src="https://cimages.milaap.org/milaap/image/upload/c_fill,g_faces,h_100,w_100/v1594626217/production/testimonials/user-7_1594626216.jpg"
+                  class="step-icon"
+                  alt=""
+                />
+                <div class="mobile-profile">
+                  <div class="step-title">Arun Katiyar</div>
+                  <div class="step-social">
+                    <img
+                      src="https://cimages.milaap.org/milaap/image/upload/c_fill,g_faces,h_30,w_30/v1594626221/production/testimonials/twitter_icon_1594626216.jpg"
+                      class="social-icon"
+                      alt=""
+                    />
+                    <a href="" class="social-url"> @arunkatiyar </a>
+                  </div>
+                </div>
+              </div>
+              <div class="testimonial-description">
+                <div class="step-info">
+                  @milaapdotorg thank you for making things like this happen:
+                  https://milaap.org/updates/this-amount-fulfilled-her-dreams-of-buying-a-cow
+                  You guys rock! #LoveReadingYourMails
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <button
