--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./component/headers.css">
     <style>
       .carousel {
         width: 80%;
@@ -122,59 +123,9 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a href="#"
-          ><img
-            src="https://assets.milaap.org/assets/milaap-logo-tiny-4d3dbc4e55c2aaec351f0f376329c624236c4d6266b910f472684e70603f600d.png"
-            alt=""
-            class="logo"
-            class="navbar-brand"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Donate</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Lend</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success profile-btn" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
-      </div>
-    </nav>
-
+   <div id="navbar"></div>
+   <div id="popup">
+  </div>
     <!-- Banner Section Start -->
     <section class="banner-section">
       <div class="container-box">
@@ -551,10 +502,29 @@
     </section>
     <!-- Carousel Section End -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-      crossorigin="anonymous"
-    ></script>
+    <script type="module">
+      import {headers} from "../component/headers.js";
+      document.querySelector("#navbar").innerHTML=headers();
+      let register=document.getElementById("reg")
+    register.addEventListener("click",()=>{
+        showreg()
+    })
+    let showreg=()=>{
+      console.log("hello")
+        document.getElementById("popup").innerHTML=null
+        document.getElementById("popup").style.visibility="visible"
+        let login=document.createElement("a")
+        login.innerText="Login"
+        login.setAttribute("href","./signup/login.html")
+        let signup=document.createElement("a")
+        signup.innerText="Signup"
+        signup.setAttribute("href","./signup/signup.html")
+        
+        document.getElementById("popup").append(login,signup)
+    }
+      // src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      // integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      // crossorigin="anonymous"
+    </script>
   </body>
 </html>
