--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/contact.css">
+    <link rel="stylesheet" href="./component/headers.css">
     <title>contact</title>
  
 </head>
 <body>
     
-    
+    <div id="navbar"></div>
    <div id="top">
       <div id="tcentre">
            <div id="topone">
@@ -95,4 +96,4 @@
 </body>
 </html>
 
-<script src="./scripts/contact.js"> </script>
+<script src="./scripts/contact.js" type="module"></script>
