--- a/donate.html
+++ b/donate.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Donate</title>
     <link rel="stylesheet" href="donate.css">
+    <link rel="stylesheet" href="./component/headers.css">
 </head>
 <body>
+    <div id="navbar"></div>
     <div id="big">
-        <div id="navbar"></div>
+        
         <div id="first">
             <h3>
                 Thousands are crowdfunding for various causes. Support a fundraiser today.
@@ -36,4 +38,4 @@
     <div id="cards"></div>
 </body>
 </html>
-<script src="donate.js"></script>
+<script src="donate.js" type="module"></script>
