--- a/Lend_Page/lend.html
+++ b/Lend_Page/lend.html
@@ -15,13 +15,15 @@
     width: 50%;
     margin: auto;
     visibility: hidden;
-    margin-top: -200px;
+    margin-top: -155px;
     transition: all 1s;
-    background-color: rgb(233, 238, 238);
+    background-color: white;
     transform: scale(1);
     box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
-
+#navbar>#raiser22{
+    margin-top: 20px;
+}
     </style>
 </head>
 <body>
