--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/contact.css">
     <link rel="stylesheet" href="./component/headers.css">
+    <link rel="stylesheet" href="./footer/footer.css">
     <title>contact</title>
  
 </head>
@@ -91,7 +92,9 @@
        <div id="scontainer"></div>
     </div>
 
-  
+    <div id="footer">
+        
+    </div>
 
 </body>
 </html>
