--- a/donate.html
+++ b/donate.html
@@ -7,6 +7,7 @@
     <title>Donate</title>
     <link rel="stylesheet" href="donate.css">
     <link rel="stylesheet" href="./component/headers.css">
+    <link rel="stylesheet" href="./footer/footer.css">
 </head>
 <body>
     <div id="navbar"></div>
@@ -27,7 +28,9 @@
         <div id="dog"></div>
     </div>
      <div id="fund"></div> 
-    
+     <div id="footer">
+        
+    </div>
 </body>
 </html>
 <script src="donate.js" type="module"></script>
