--- a/signup/signup.html
+++ b/signup/signup.html
@@ -24,7 +24,7 @@
            <button id="signup" onclick="signup()">Sign up</button>
            <div id="box21">
             <p>Already signed up with Milaap?</p>
-            <!-- <button><a href="./login.html">Login</a></button> -->
+            <button><a href="./login.html">Login</a></button>
            </div>
         </div>
     </div>
