--- a/donate.html
+++ b/donate.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Donate</title>
     <link rel="stylesheet" href="donate.css">
+    <link rel="stylesheet" href="./component/headers.css">
 </head>
 <body>
+    <div id="navbar"></div>
     <div id="big">
-        <div id="navbar"></div>
+        
         <div id="first">
             <h3>
                 Thousands are crowdfunding for various causes. Support a fundraiser today.
@@ -18,6 +20,7 @@
         </div>
         <button id="refine">Refine Search</button>
         <div id="cards"></div>
+        <div id="card2"></div>
         <div id="see">
             <div id="half1"></div>
             <div id="half2"></div>
@@ -25,15 +28,7 @@
         <div id="dog"></div>
     </div>
     <div id="fund"></div>
-    <div id="navbar"></div>
-    <div id="first">
-        <h3>
-            Thousands are crowdfunding for various causes. Support a fundraiser today.
-        </h3>
-        <img src="https://assets.milaap.org/assets/campaign_list/hand-icon-a6aa7d32e8617b3f8a0f20c2f19d009af223df706aa7e31464e72c382afdceb0.svg" alt="image">
-    </div>
-    <button id="refine">Refine Search</button>
-    <div id="cards"></div>
+    
 </body>
 </html>
 <script src="donate.js"></script>
