--- a/donate.html
+++ b/donate.html
@@ -1,35 +1,35 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate</title>
-    <link rel="stylesheet" href="donate.css" />
-    <link rel="stylesheet" href="./component/headers.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="donate.css">
+    <link rel="stylesheet" href="./component/headers.css">
+</head>
+<body>
     <div id="navbar"></div>
     <div id="big">
-      <div id="first">
-        <h3>
-          Thousands are crowdfunding for various causes. Support a fundraiser
-          today.
-        </h3>
-        <img
-          src="https://assets.milaap.org/assets/campaign_list/hand-icon-a6aa7d32e8617b3f8a0f20c2f19d009af223df706aa7e31464e72c382afdceb0.svg"
-          alt="image"
-        />
-      </div>
-      <button id="refine">Refine Search</button>
-      <div id="cards"></div>
-      <div id="see">
-        <div id="half1"></div>
-        <div id="half2"></div>
-      </div>
-      <div id="dog"></div>
+        
+        <div id="first">
+            <h3>
+                Thousands are crowdfunding for various causes. Support a fundraiser today.
+            </h3>
+            <img src="https://assets.milaap.org/assets/campaign_list/hand-icon-a6aa7d32e8617b3f8a0f20c2f19d009af223df706aa7e31464e72c382afdceb0.svg" alt="image">
+        </div>
+        <button id="refine">Refine Search</button>
+        <div id="cards"></div>
+        <div id="card2"></div>
+        <div id="see">
+            <div id="half1"></div>
+            <div id="half2"></div>
+        </div>
+        <div id="dog"></div>
     </div>
     <div id="fund"></div>
-  </body>
+    
+</body>
 </html>
 <script src="donate.js"></script>
