--- a/contact.html
+++ b/contact.html
@@ -66,21 +66,22 @@
     </div>
   </div>
        <!-- ************* -->
-    <div id="know_what">
-        <h1>Let us know what you think </h1>
+       <div id="know_what">
+        <h1>Let us know what you think </h1> 
       </div>
+
     <div id="suggestionbox">
       <div id="credential">
          <input type="text" id="name" placeholder="Name">
          <input type="email" id="mail" placeholder="Email address">
      </div>
+     
      <input id="queries" placeholder="You can type any suggestions or queries you might have. Let us help you!" ></input>
+     
       <div id="send" >
-        <button onclick="sendmessage()">Send</button>
+        <button  id="sendmessage">Send</button>
       </div>
        <div id="scontainer"></div>
-    </div>
-    <div id="footer">
     </div>
 </body>
 </html>
