--- a/price.html
+++ b/price.html
@@ -59,9 +59,9 @@
 
     <div class="calcontainer">
       <div>
-        <h2>Consider setting a goal of approx.</h2>
-        <h1 id="goal">₹10,232.27</h1>
-        <p>
+        <h2  style="background: transparent">Consider setting a goal of approx.</h2>
+        <h1 id="goal"  style="background: transparent">₹10,232.27</h1>
+        <p  style="background: transparent">
           Disclaimer: This goal is the approximate amount you should <br />
           consider setting where we assume that you would receive 70% of the
           total funds from INR contributions.
@@ -69,7 +69,7 @@
       </div>
 
       <div>
-        <h2>See breakup</h2>
+        <h2  style="background: transparent">See breakup</h2>
         <div class="breakup">
           <p>Want to raise (₹) :</p>
           <p id="samount">10000</p>
