--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./component/headers.css">
     <link rel="stylesheet" href="./footer/footer.css">
     <title>contact</title>
+    <style>
+      #raiser22{
+        margin-top: 20px;
+      }
+    </style>
 </head>
 <body>
     <div id="navbar"></div>
