--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
 
     <link rel="stylesheet" href="./styles/popup.css" />
     <style>
+       
+      #raiser22{
+        margin-top: 20px;
+        /* width: 100%; */
+      }
+  .cta{
+    width: 100%;
+  }
+  .nav__links>a:last-child{
+     width: 100%;
+  }
       .pp {
         margin-top: 80px;
         margin-left: 80%;
