--- a/price.html
+++ b/price.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./component/headers.css" />
     <link rel="stylesheet" href="./footer/footer.css" />
     <title>Pricing</title>
+    <style>
+      #raiser22{
+        margin-top: 20px;
+      }
+    </style>
   </head>
   <body>
     <div id="navbar"></div>
@@ -86,7 +91,7 @@
     </div>
 
     <!-- *********** -->
-    <div id="bottom">
+    <div id="bottom33">
       <p id="questio">Why choose Milaap?</p>
 
       <div id="mainimage">
