--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
      </div>
      <input id="queries" placeholder="You can type any suggestions or queries you might have. Let us help you!" ></input>
       <div id="send" >
-        <button onclick="sendmessage()">Send</button>
+        <button id="secc">Send</button>
       </div>
        <div id="scontainer"></div>
     </div>
