--- a/price.html
+++ b/price.html
@@ -59,7 +59,7 @@
 
     <!-- *********** -->
     <div id="calculate">
-      <button onclick="addToWallet()">Calculate</button>
+      <button id="cal">Calculate</button>
     </div>
 
     <div class="calcontainer">
